feat(vue3): various upgrades for vue 3
Upgrades dependencies, migrates to storybook + vite, removes default export.

BREAKING CHANGE: Users will have to use es6-style named imports instead.

closes #44, closes #52

--- a/src/stories/docs/advanced-migrating.mdx
+++ b/src/stories/docs/advanced-migrating.mdx
@@ -1,8 +1,12 @@
+import { Meta } from '@storybook/blocks';
+
+<Meta title="Advanced/Migrating existing projects" />
+
 ### Migrating existing projects
 
-If you are migrating an existing project to vue-input-facade from another plugin and dont want to touch the whole codebase.  You may pass options during plugin installation to override the default tokens or directive name.
+If you are migrating an existing project to vue-input-facade from another plugin and dont want to touch the whole codebase. You may pass options during plugin installation to override the default tokens or directive name.
 
-```javascript
+```js
 import InputFacade from 'vue-input-facade'
 
 // migrating from v-mask
